notification 디자인 수정 및 기능 구현   * noti Icon 변경 (small, large)   * notification 클릭 시 설정한 액티비티로 이동   * 액티비티 실행시 extra를 통한 데이터 전달 기능 구현

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,13 @@
         android:textOn="ON"
         android:textOff="OFF"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView"
+        android:layout_below="@+id/toggle"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
 </RelativeLayout>
